# Mashine-Project-2

./: CMakeLists.txt
Mashine Project 2/: CMakeLists.txt  Mashine Project 2.c  Mashine Project 2.h  structs.h
