# CMakeList.txt : CMake project for Mashine Project 2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Mashine Project 2.c" "Mashine Project 2.h" "structs.h")

# TODO: Add tests and install targets if needed.
